correction loader du au saccade - aucun soucie sur version mobile, ni sur ecran petit

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -212,7 +212,7 @@ body {
   display: inline-block;
   text-transform: uppercase;
   font-family: "Shrikhand", cursive;
-  font-size: 5rem;
+  font-size: 9rem;
   font-weight: 600;
   transform: scale(0.5);
   color: #9356dc;
@@ -649,7 +649,27 @@ body {
     grid-column-gap: 15px;
   }
 }
+@media only screen and (max-width: 1100px) {
+  .load-txt p {
+    font-size: 6rem;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .load-txt p {
+    font-size: 5rem;
+  }
+}
 @media only screen and (max-width: 600px) {
+  .load-txt p {
+    font-size: 4rem;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .load-txt p {
+    font-size: 3rem;
+  }
+}
+@media only screen and (max-width: 380px) {
   .load-txt p {
     font-size: 2rem;
   }
