--- a/source/sass/base/_animations.scss
+++ b/source/sass/base/_animations.scss
@@ -356,7 +356,7 @@
         display: inline-block;
         text-transform: uppercase;
         font-family: 'Shrikhand', cursive;
-        font-size: 5rem;
+        font-size: 9rem;
         font-weight: 600;
         transform: scale(.5);
         color: rgba(147,86,220,1);
