--- a/source/sass/components/_media.scss
+++ b/source/sass/components/_media.scss
@@ -1,5 +1,5 @@
 
-// INDEX HEADER MAIN FOOTER
+// ** HEADER MAIN FOOTER **
 @media only screen and (min-width: 900px) {
 
 
@@ -100,8 +100,10 @@
     }
 
 }
+// ************************
 
-// PAGES RESTAURANTS 
+
+// ** PAGES RESTAURANTS ***
 @media only screen and (min-width: 1100px) {
 
     body {
@@ -126,9 +128,67 @@
     }
     
 }
+// ************************
 
-// Animation loader txt resize 
+
+// ***  LOADER INDEX  *****
+@media only screen and (max-width: 1100px) {
+
+    .load-txt {
+
+        p {
+    
+            font-size: 6rem;
+
+        }
+
+    }
+
+}
+
+@media only screen and (max-width: 700px) {
+
+    .load-txt {
+
+        p {
+    
+            font-size: 5rem;
+
+        }
+
+    }
+
+}
+ 
 @media only screen and (max-width: 600px) {
+
+    .load-txt {
+
+        p {
+
+            font-size: 4rem;
+
+        }
+
+    }
+
+}
+
+@media only screen and (max-width: 500px) {
+
+    .load-txt {
+
+        p {
+
+            font-size: 3rem;
+
+        }
+
+    }
+
+}
+
+@media only screen and (max-width: 380px) {
 
     .load-txt {
 
@@ -141,7 +201,10 @@
     }
 
 }
+// ************************
 
+
+// ****** HEADER **********
 @media only screen and (max-width: 420px) {
 
     .header {
@@ -184,3 +247,4 @@
     }
 
 }
+// ************************
